# nequix

./: .gitignore  README.md  pyproject.toml
configs/: nequix-mp-1.yml  nequix-oam-1.yml  nequix-omat-1.yml
data/: download_salex.sh
data/autobatch/: omat24.yml
nequix/: autobatch.py  autobatch_probe.py  calculator.py  cli.py  data.py  evaluation.py  hardware.py  jax_md.py  model.py  run_summary.py  scaling.py  torch_sim.py  train.py  train_utils.py
nequix/config/: __init__.py  models.py
nequix/config/atom_energies/: mp.yml  oam.yml  omat.yml
nequix/config/runs/: __init__.py  nequix.py  pft.py
nequix/pft/: data.py  train.py
nequix/torch_impl/: model.py  train.py  utils.py
scripts/: analyze_scaling.py  benchmark_neighborlists.py  benchmark_neighbour_lists.py  compute_atom_energies.py  compute_dataset_stats.py  convert_weights.py  eval_matbench_discovery.py  migrate_v1_checkpoint.py  pkl_to_nqx.py  preprocess_ase_db.py  preprocess_data.py  preprocess_data_phonopy.py  run_scaling_sweep.py  run_scaling_trial.py  time_evaluations.py  train_oam_foundation.sh  train_omat_foundation_curriculum.sh
tests/: conftest.py  test_autobatch.py  test_benchmark.py  test_calculator.py  test_config.py  test_conversion.py  test_data.py  test_evaluation.py  test_jax_md.py  test_model.py  test_scaling.py  test_torch_sim.py  test_training_data.py
tests/torch_impl/: test_model_torch.py
