[project]
name = "nequix"
version = "0.4.5"
description = "Nequix source code"
readme = "README.md"
authors = [
    { name = "Teddy Koker", email = "teddy.koker@gmail.com" }
]
requires-python = ">=3.11"
license = { file = "LICENSE" }

dependencies = [
    "jax[cuda12]>=0.5.3,<0.6; sys_platform == 'linux'",
    "jax>=0.5.3,<0.6; sys_platform == 'darwin'",
    "nvalchemi-toolkit-ops[torch]>=0.4.0; sys_platform == 'linux'",
    "torch>=2.8,<2.11; sys_platform == 'linux'",
    "numpy>=1.26,<2",
    "e3nn-jax>=0.20.8",
    "jraph>=0.0.6.dev0",
    "equinox>=0.11.11",
    "optax>=0.2.5",
    "ase>=3.24.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
    "matscipy>=1.1.1",
    "h5py>=3.14.0",
    "wandb-osh>=1.2.2",
    "cloudpickle>=3.1.1",
    "atompack-db>=0.4.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://pypi.org/project/nequix/"
Repository = "https://github.com/atomicarchitects/nequix"


[project.scripts]
train = "nequix.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
include = ["nequix/*"]

[dependency-groups]
dev = [
    "ase-db-backends>=0.1.0",
    "ipython>=8.36.0",
    "jax-md",
    "pandas>=2.3.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
]

[tool.ruff]
line-length = 100

[tool.uv.sources]
jax-md = { git = "https://github.com/jax-md/jax-md.git" }

[project.optional-dependencies]
torch = [
  "e3nn>=0.5.8",
  "openequivariance>=0.6.4",
  "torch>=2.7.0",
  "torch-geometric>=2.6.1",
  "setuptools",
]
torch-sim = [
  "nequix[torch]",
  "torch-sim-atomistic>=0.5.2; python_version >= '3.12'",
  "torch>=2.8.0; python_version >= '3.12'",
]
oeq = [
  # You need to install openequivariance_extjax separately
  # uv pip install openequivariance_extjax --no-build-isolation
  "openequivariance[jax]>=0.6.4",
]
pft = [
    "phonopy>=2.43.1",
]
